<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to">Welcome to</string>
    <string name="my_budget_buddy">My Budget Buddy !</string>
    <string name="underlined_button"><u>Dont have an account?</u></string>
    <string name="underlined_button2"><u>Already have an account?</u></string>
    <string name="eg_johndoe_gmail_com">eg. johndoe@gmail.com </string>
    <string name="Login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back_to_home_screen">Back to Home Screen</string>
    <string name="stay_tuned_for_all_that_comes_next">Stay tuned for all that comes next!</string>
    <string name="the_budgetbuddy_team_is_working_day_and_night_to_bring_you_cool_new_features">The BudgetBuddy Team is working day and night to bring you cool new features.</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="eg_john">eg. John</string>
    <string name="eg_doe">eg. Doe</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="month">Month</string>
    <string name="total_spending">Total Spending:</string>
    <string name="_0_00">0.00</string>
    <string name="generate_report">Generate Report</string>
    <string name="monthly_goal">Monthly Goal</string>
    <string name="filter_button">Filter Button</string>
    <string name="back_button" />
    <string name="insert_image">Insert Image</string>
    <string name="date">Date</string>
    <string name="amount_r">Amount (R)</string>
    <string name="save">Save</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_an_expense">Add An Expense</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="envelope">Envelope</string>
    <string name="back">Back</string>
    <string name="expense_report">Expense Report</string>
    <string name="expenses_will_appear_here_scrollview">Expenses will appear here + ScrollView!!</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="report_output">Report Output:</string>
    <string name="view_report">View Report</string>
    <string name="enter_max_goal">Enter Max Goal</string>
    <string name="enter_min_goal">Enter Min Goal</string>
    <string name="maximum_goal">Maximum Goal</string>
    <string name="minimum_goal">Minimum Goal</string>
    <string name="month_displayed_here">Month Displayed Here!!</string>
    <string name="enter_expense_description">Enter Expense Description</string>
    <string name="total_r">Total: R</string>
    <string name="settings">Settings</string>
    <string name="account_information">Account Information</string>
    <string name="achievements">Achievements</string>
    <string name="currency">Currency</string>
    <string name="logout">Logout</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="user_information">User Information</string>
    <string name="name">Name:</string>
    <string name="name_will_appear_here">Name will appear here</string>
    <string name="email_will_appear_here">Email will appear here</string>
    <string name="join_date">Join Date:</string>
    <string name="date_will_appear_here">Date will appear here</string>
    <string name="account_info">Account Info</string>
    <string name="category">Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="description">Description</string>
</resources>