<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report">

    <include layout="@layout/activity_nav_bar_layout"/>

    <ImageButton
        android:id="@+id/btnBackButton"
        android:layout_width="34dp"
        android:layout_height="40dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115"
        app:srcCompat="@drawable/back_icon_removebg_preview"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtExpenseReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_report"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />


    <TextView
        android:id="@+id/ExpensesAppearHere"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:text="@string/expenses_will_appear_here_scrollview"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edtStartDate"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_start_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        tools:ignore="Autofill,VisualLintOverlap" />

    <ImageView
        android:id="@+id/imgStartDateBorder"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/rounded_corner"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/edtEndDate"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_end_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        tools:ignore="Autofill,VisualLintOverlap" />

    <ImageView
        android:id="@+id/imgEndDateBorder"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        app:srcCompat="@drawable/rounded_corner"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/txtStartDateHeading"
        android:layout_width="61dp"
        android:layout_height="17dp"
        android:text="@string/start_date"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtEndDateHeading"
        android:layout_width="61dp"
        android:layout_height="17dp"
        android:text="@string/end_date"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        tools:ignore="TextSizeCheck,TextSizeCheck" />


    <TextView
        android:id="@+id/txtReportOutput"
        android:layout_width="100dp"
        android:layout_height="17dp"
        android:text="@string/report_output"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnViewReport"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buddylightblue"
        android:text="@string/view_report"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotalLabel"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/total_r"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/_0_00"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />


</androidx.constraintlayout.widget.ConstraintLayout>