<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Expense">

    <include layout="@layout/activity_nav_bar_layout"/>

    <TextView
        android:id="@+id/txtAddAnExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_an_expense"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAnExpense"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="Autofill,VisualLintOverlap" />


    <ImageView
        android:id="@+id/imgAmountBorder"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        app:srcCompat="@drawable/rounded_corner"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/txtAmountHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_r"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAnExpense"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        android:id="@+id/edtDate"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_date"
        android:textColorHint="#546E7A"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAmount"
        app:layout_constraintVertical_bias="0.264"
        tools:ignore="Autofill,TextContrastCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/txtDateHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAmount"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/btnAddImage"
        android:layout_width="45dp"
        android:layout_height="51dp"
        android:background="@null"
        android:contentDescription="@string/filter_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDate"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/paper_clip"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/txtImageHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_image"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAddImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDate"
        app:layout_constraintVertical_bias="0.929" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/buddylightblue"
        android:text="@string/save"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDate"
        app:layout_constraintVertical_bias="0.514" />


    <ImageButton
        android:id="@+id/btnBackButton"
        android:layout_width="34dp"
        android:layout_height="40dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115"
        app:srcCompat="@drawable/back_icon_removebg_preview"
        tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_expense_description"
        android:textColorHint="#546E7A"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <TextView
        android:id="@+id/txtDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <ImageView
        android:id="@+id/imgDescriptionBorder"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376"
        app:srcCompat="@drawable/rounded_corner"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imgDateBorder"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@drawable/rounded_corner"
        tools:ignore="ContentDescription,ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>